<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0001FC"
    tools:context=".Login">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="220dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="68dp"
        android:gravity="center_horizontal|top"
        android:text="@string/login"
        android:textAppearance="@style/connexion"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/login_editText2"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="208dp"
        android:background="@drawable/form_border"
        android:ems="10"
        android:fontFamily="@font/sf_pro"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/email"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <TextView
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_editText2"
        app:layout_constraintStart_toStartOf="@+id/login_editText2" />

    <EditText
        android:id="@+id/login_editText3"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/form_border"
        android:ems="10"
        android:fontFamily="@font/sf_pro"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_editText2" />

    <TextView
        android:layout_width="85dp"
        android:layout_height="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_editText3"
        app:layout_constraintStart_toStartOf="@+id/login_editText3" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_editText3" />

    <TextView
        android:id="@+id/login_text2"
        android:layout_width="200dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/validate"
        android:textAppearance="@style/let_s_start"
        android:textStyle="bold"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toTopOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/already_hav2"
        style="@style/already_hav"
        android:layout_width="276dp"
        android:layout_height="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/do_not_hav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <TextView
        android:id="@+id/skip_for_no2"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="103dp"
        android:gravity="center_horizontal|top"
        android:text="@string/skip_for_no"
        android:textAppearance="@style/skip_for_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/already_hav2" />
</androidx.constraintlayout.widget.ConstraintLayout>