<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0001FC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/latech"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/pt_mono"
        android:gravity="center_horizontal|top"
        android:text="@string/latech"
        android:textAppearance="@style/latech"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tech_market"
        android:layout_width="200dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/sf_pro"
        android:gravity="center_horizontal|top"
        android:text="@string/tech_market"
        android:textAppearance="@style/tech_market"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latech" />

    <ImageView
        android:id="@+id/ellipse_8"
        android:layout_width="301dp"
        android:layout_height="322dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
        app:layout_constraintTop_toTopOf="@+id/latech" />

    <TextView
        android:id="@+id/let_s_start"
        android:layout_width="90dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/sf_pro"
        android:gravity="center_horizontal|top"
        android:text="@string/let_s_start"
        android:textAppearance="@style/let_s_start"
        android:textStyle="bold"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonStart"
        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
        app:layout_constraintStart_toStartOf="@+id/buttonStart"
        app:layout_constraintTop_toTopOf="@+id/buttonStart" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="311dp"
        android:layout_height="53dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="345dp"
        android:background="@drawable/round_edge"
        android:elevation="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tech_market" />

    <TextView
        android:id="@+id/skip_for_no"
        android:layout_width="110dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:gravity="center_horizontal|top"
        android:text="@string/skip_for_no"
        android:textAppearance="@style/skip_for_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/let_s_start" />
</androidx.constraintlayout.widget.ConstraintLayout>